[tool.poetry]
name = "hatespeech"
version = "0.1.0"
description = ""
authors = ["Nazariy Bachynsky <nazariybp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.3.3"
scikit-learn = "^1.6.1"
nbformat = "^5.10.4"
matplotlib = "^3.10.1"
torch = {version = "^2.6.0", source = "pytorch-gpu-src"}
torchvision = {version = "^0.21.0", source = "pytorch-gpu-src"}
torchaudio = {version = "^2.6.0", source = "pytorch-gpu-src"}
tqdm = "^4.67.1"
transformers = "^4.50.3"
seaborn = "^0.13.2"
wordcloud = "^1.9.4"
nltk = "^3.9.1"
plotly = "^6.0.1"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
